--- a/app/src/main/res/layout/activity_my_edit.xml
+++ b/app/src/main/res/layout/activity_my_edit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:myedit="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,5 +12,6 @@
 
     <com.uniquedu.mycustomview.widget.MyEditText
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="100dp"
+        myedit:myColor="#ffff00" />
 </RelativeLayout>
